*SVN*

* Array#to_query preserves its ordering.  #7756 [Greg Spurrier]

* Out-of-range Time calculations transparently overflow to DateTime. Introduce Time#to_datetime.  #7706, #7715 [Geoff Buesing]

* DateTime calculations analogous to the Date and Time extensions.  #7693 [Geoff Buesing]

* Give DateTime correct .to_s implementations, lets it play nice with ActiveRecord quoting.  #7649 [Geoff Buesing]

* Add File.atomic_write,  allows you to write large files in an atomic manner, preventing users from seeing half written files.  [Koz]

* Allow users to provide custom formatters to Logger. [aeden]

* Hash#to_query CGI-escapes its keys.  [Jeremy Kemper]

* Deprecation: warn on stderr if RAILS_DEFAULT_LOGGER isn't set yet.  [Jeremy
Kemper]

* Optimize Class Inheritable Attributes so that unnecessary hashes are not created.  Closes #7472 [Bruce Perens]

* Ruby 1.8-cvs and 1.9 define a private Time#to_date that overrides Active Support. Make it public to preserve compatibility.  [Jeremy Kemper]

* Full test coverage for Inflector.  #7228 [Dan Kubb]

* :db format for Date#to_s [Jeremy Kemper]
    Date.new(2007, 1, 27).to_s(:db) # => '2007-01-27'

* Added :instance_writer option to #mattr_writer/accessor, #cattr_writer/accessor, and #class_inheritable_writer to skip the creation of the instance writer.  [Rick]

* Added Hash#to_query to turn a hash of values into a form-encoded query string [Nicholas Seckar]

* Increase test coverage for subclasses_of. Closes #7335. [Roman2K, Nicholas Seckar]

* Remove unused code from Duration#inspect.  Closes #7180.  [Rich Collins]

* Added test coverage for Inflector.inflections.clear.  Closes #7179. [Rich Collins]

* ActiveSupport::Multibyte::Handlers::UTF8Handler should raise when a range and an integer are passed in (just like the native implementation).  Closes #7176 [Rich Collins]

* A couple extra tests for #classify.  Closes #7273. [Josh Susser]

* Better docs for Object extensions [zackchandler, Jamis Buck]
