@@ -318,13 +318,13 @@ module Dependencies #:nodoc:
     watch_frames = descs.collect do |desc|
       if desc.is_a? Module
         mod_name = desc.name
-        initial_constants = desc.constants
+        initial_constants = desc.local_constants
       elsif desc.is_a?(String) || desc.is_a?(Symbol)
         mod_name = desc.to_s
         
         # Handle the case where the module has yet to be defined.
         initial_constants = if qualified_const_defined?(mod_name)
-          mod_name.constantize.constants
+          mod_name.constantize.local_constants
         else
          []
         end
@@ -349,7 +349,7 @@ module Dependencies #:nodoc:
         
         mod = mod_name.constantize
         next [] unless mod.is_a? Module
-        new_constants = mod.constants - prior_constants
+        new_constants = mod.local_constants - prior_constants
         
         # Make sure no other frames takes credit for these constants.
         constant_watch_stack.each do |frame_name, constants|
