@@ -9,6 +9,10 @@ module ModuleWithMissing
   end
 end
 
+module ModuleWithConstant
+  InheritedConstant = "Hello"
+end
+
 class DependenciesTest < Test::Unit::TestCase
   def teardown
     Dependencies.clear
@@ -572,6 +576,13 @@ class DependenciesTest < Test::Unit::TestCase
     assert Dependencies.constant_watch_stack.empty?
   ensure
     Object.send :remove_const, :M rescue nil
+  end
+
+  def test_new_constants_in_with_inherited_constants
+    m = Dependencies.new_constants_in(:Object) do
+      Object.send :include, ModuleWithConstant
+    end
+    assert_equal [], m
   end
 
   def test_file_with_multiple_constants_and_require_dependency
