@@ -1,5 +1,7 @@
 *SVN*
 
+* Update Dependencies to ignore constants inherited from ancestors. Closes #6951. [Nicholas Seckar]
+
 * Array#to_query preserves its ordering.  #7756 [Greg Spurrier]
 
 * Out-of-range Time calculations transparently overflow to DateTime. Introduce Time#to_datetime.  #7706, #7715 [Geoff Buesing]
